# airgapped_llm

./: .gitignore  01-system-architecture  03-state-schema  CAAA_CONSTITUTION_SPEC.md  CAAA_IMPLEMENTATION_PROPOSAL  CAAA_IMPLEMENTATION_PROPOSAL.md  CAAA_STATE_RECOVERY.md  Cargo.toml  README.md  caaa-build-plan-f4d3c5
airgap/: README.md  get_bundle.sh  install_offline.sh  verify_install.sh
airgap/docs/: new_install.md
crates/caaa-pki/: Cargo.toml
crates/caaa-pki/src/: lib.rs
crates/caaa-proto/: Cargo.toml  build.rs
crates/caaa-proto/proto/: caaa.proto
crates/caaa-proto/src/: lib.rs
docs/: CAAA_DEPLOYMENT_OPERATIONS.md  CAAA_MODEL_MANIFEST.md  CAAA_RISK_REGISTER.md
scripts/: m0_init.sh
