[package]
name = "caaa-pki"
version.workspace = true
edition.workspace = true
description = "PKI provisioning and mTLS certificate management for CAAA"

[dependencies]
rcgen = { workspace = true }
x509-parser = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
nix = { workspace = true }
