[package]
name = "caaa-proto"
version.workspace = true
edition.workspace = true
description = "gRPC protocol definitions for CAAA"

[dependencies]
tonic = { workspace = true }
prost = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }

[build-dependencies]
tonic-build = "0.11.0"
